src/objects/Station__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>住所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeocodingAddress__c</fullName>
        <formula>Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*GeocodingAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineEXID__c</fullName>
        <externalId>true</externalId>
        <label>路線外部ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>経緯度</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Post__c</fullName>
        <label>郵便番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StationEXID__c</fullName>
        <externalId>true</externalId>
        <label>駅外部ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Station_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>路線</label>
        <referenceTo>Station_Line__c</referenceTo>
        <relationshipLabel>Stations</relationshipLabel>
        <relationshipName>Stations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lat__c</fullName>
        <formula>Location__Latitude__s</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*Latitude</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lng__c</fullName>
        <formula>Location__Longitude__s</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*Longitude</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <label>Station</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>0BC10000000005T</columns>
        <columns>0BC10000000005U</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>駅名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>